--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="sub-box2">
                     <div class="sub-img">
                         <img src="./Resources/hulu-clone.png" class="hulu-clone"> 
-                        <h3><a href="Resources\hulu-clone.png" target="_blank">Hulu Clone App</a></h3>
+                        <h3><a href="https://hulu-clone-b8e79.web.app/" target="_blank">Hulu Clone App</a></h3>
                     </div>               
                 </div>
 
