--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
                 <h2>Skills</h2>
             </div>
 
-            <div class="items">  
+            <div class="items"> 
+                <div class="sub-box">
+                    <div class="sub-img" class="css">
+                        <img src="./Resources\Python.png">
+                        <h3>Python</h3>
+                    </div>
+                </div>
+
+                <div class="sub-box">
+                    <div class="sub-img" class="css">
+                        <img src="./Resources\Java.png">
+                        <h3>Java</h3>
+                    </div>
+                </div>
+
                 <div class="sub-box">
                     <div class="sub-img" class="html">
                         <img src="./Resources\html5.png">
@@ -169,7 +183,7 @@
                 <div class="sub-box2">
                     <div class="sub-img">
                         <img src="./Resources/hulu-clone.png" class="hulu-clone"> 
-                        <h3><a href="Resources\hulu-clone.png" target="_blank">Hulu Clone App</a></h3>
+                        <h3><a href="https://hulu-clone-b8e79.web.app/" target="_blank">Hulu Clone App</a></h3>
                     </div>               
                 </div>
 
