Made changes to index.html

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                 </div>
 
                 <div class="sub-box">
+                    <div class="sub-img" class="css">
+                        <img src="./Resources\Bootstrap.png">
+                        <h3>Bootstrap</h3>
+                    </div>
+                </div>
+
+                <div class="sub-box">
                     <div class="sub-img" class="js">
                         <img src="./Resources\javascript.png">
                         <h3>Javascript</h3>
