--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="sub-box">
-                    <div class="sub-img" class="css">
+                    <div class="sub-img" class="boostrap">
                         <img src="./Resources\Bootstrap.png">
                         <h3>Bootstrap</h3>
                     </div>
