--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
                         <h3>PostgreSQL</h3>
                     </div>
                 </div>
+
+                <div class="sub-box">
+                    <div class="sub-img" class="mongodb">
+                        <img src="Resources\MongoDB.png">
+                        <h3>MonogDB</h3>
+                    </div>
+                </div>
             
             </div>
         </section>
@@ -182,30 +189,9 @@
 
                 <div class="sub-box2">
                     <div class="sub-img">
-                        <img src="./Resources/calculator.png" class="calculator" >
-                        <h3><a href="https://setjhaba.github.io/Project-Calculator/" target="_blank">Calculator App</a></h3>
-                    </div>
-                </div>
-
-                <div class="sub-box2">
-                    <div class="sub-img">
                         <img src="./Resources/hulu-clone.png" class="hulu-clone"> 
                         <h3><a href="https://hulu-clone-b8e79.web.app/" target="_blank">Hulu Clone App</a></h3>
                     </div>               
-                </div>
-
-                <div class="sub-box2">
-                    <div class="sub-img">
-                        <img src="./Resources/Weather App.png" class="weather_app">
-                        <h3>Weather App</h3>
-                    </div>
-                </div>
-
-                <div class="sub-box2">
-                    <div class="sub-img">
-                        <img src="./Resources/QR Code.png" class="qr-code">
-                        <h3><a href="https://setjhaba.github.io/QR-Code-Generater/" target="_blank">QR Code</a></h3>
-                    </div>
                 </div>
 
             </div>
